# Crunchy-telegram-bot

./: .gitignore  Cargo.toml
src/: main.rs  service.rs
src/models/: assets.rs  mod.rs  movie.rs  orders.rs  soccer.rs
src/service/: crypto_service.rs  gpt_service.rs  mod.rs  movie_service.rs  soccer_service.rs  telegram_service.rs
src/utils/: custom_error_handler.rs  data.rs  environment.rs  helpers.rs  logger.rs  mod.rs
